[package]
name = "lua-bind"
version = "0.1.0"
edition = "2021"
authors = ["mein <mein412@foxmail.com>"]
description = "Thread-safe Lua binding system with automatic type registration and dependency injection"
license = "MIT OR Apache-2.0"
repository = "https://github.com/wuslin/lua-bind"
documentation = "https://docs.rs/lua-bind"
readme = "README.md"
keywords = ["lua", "binding", "ffi", "scripting", "automation"]
categories = ["external-ffi-bindings", "api-bindings", "development-tools"]

[features]
default = []
async = ["mlua/async"] 
vendored = ["mlua/vendored"]
test-async = ["async", "reqwest", "tokio"]

[dependencies]
thiserror = "1.0"
linkme = "0.2"
lazy_static = "1.4"
mlua = { version = "0.9", features = ["luajit"] }
paste = "1.0"

[dependencies.reqwest]
version = "0.11"
optional = true 
features = ["json"]

[dependencies.tokio]
version = "1.0"
optional = true
features = ["rt", "rt-multi-thread", "macros"]

[dev-dependencies]
rstest = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mlua = { version = "0.9", features = ["serialize"] }
